src/objects/Event_Relation__c.object
<CustomObject>
    <description>Junction object between Event Requests and requested speakers.</description>
    <fields>
        <fullName>Activity_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Detail</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipLabel>Event Relations</relationshipLabel>
        <relationshipName>Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Step_Owner__c</fullName>
        <description>This field will be used to update the owner of an Event Request to the appropriate queue or individual.</description>
        <label>Approval Step Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store all Invitees who are contacts</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Relations</relationshipLabel>
        <relationshipName>Event_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Host?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invitee_Type__c</fullName>
        <label>Invitee Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationId__c</fullName>
        <label>RelationId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Group__c</fullName>
        <formula>TEXT( Speaker__r.Speaker_Request_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Request</label>
        <referenceTo>Event_Request__c</referenceTo>
        <relationshipLabel>Requested Speaker</relationshipLabel>
        <relationshipName>Event_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_Status__c</fullName>
        <description>Picklist field added at the request of the speaker coordinator group. This field will be manually updated by the speaker team. Its purpose is to track the status of the Outlook invite once it has been sent to the requested speaker.</description>
        <label>Speaker Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted tentatively</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted tentatively,time proposed!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined,time proposed!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speaker_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Slot_End__c</fullName>
        <label>Time Slot End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Slot_Start__c</fullName>
        <label>Time Slot Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Market Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client &amp; Industry Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Update &amp; Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income Update &amp; Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Capital Market Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macro/Market Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Update and Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Investment Functions Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topic does not exist - please list in the Notes section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Continuity / System Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance System Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Update &amp; Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal / Regulatory / Litigation Welcome / Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lengthening the Time Horizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Compliance Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macroeconomic Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Risk Oversight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proxy Voting Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading Floor Tour</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event Relation</label>
    <listViews>
        <fullName>Carol_Geremia_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Carol Geremia Queue</label>
        <queue>Carol_Geremia_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPS_Institutional_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Institutional</label>
        <queue>IPS_Institutional</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Institutional_Business_Approver_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Institutional Business Approver Queue</label>
        <queue>Institutional_Business_Approver_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Institutional_Equity_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Institutional Equity Queue</label>
        <queue>Institutional_Equity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Institutional_IPM_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Institutional IPM Queue</label>
        <queue>Institutional_IPM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jim_Jesse_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Jim Jesse Queue</label>
        <queue>Jim_Jesse_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retail_Business_Approver_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail Business Approver Queue</label>
        <queue>Retail_Business_Approver_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retail_Equity_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail Equity Queue</label>
        <queue>Retail_Equity_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retail_IPM_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail IPM Queue</label>
        <queue>Retail_IPM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retail_Regional_Director_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail Regional Director</label>
        <queue>Retail_Regional_Director</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Speaker_Coordinator_Queue_Event_Relation</fullName>
        <filterScope>Queue</filterScope>
        <label>Speaker Coordinator Queue</label>
        <queue>Speaker_Coordinator_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Speaker-{00000}</displayFormat>
        <label>Requested Speaker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>